--- a/front_end/package.json
+++ b/front_end/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "client",
+  "name": "front_end",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "3.2.0",
-    "web3": "^1.6.1"
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,7 +19,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -28,5 +35,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "http": false,
+    "https": false,
+    "os": false
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.18"
   }
 }
